--- a/03-JPA-Introducao/pom.xml
+++ b/03-JPA-Introducao/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>Fiap</groupId>
+	<groupId>03-JPA-Introducao</groupId>
 	<artifactId>03-JPA-Introducao</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<build>
@@ -26,10 +26,14 @@
 		</dependency>
 		<dependency>
 			<groupId>oracle</groupId>
-			<artifactId>jdbc</artifactId>
+			<artifactId>ojdbc</artifactId>
 			<version>8</version>
 			<scope>system</scope>
 			<systemPath>D:/ojdbc8.jar</systemPath>
 		</dependency>
 	</dependencies>
 </project>
+
+
+
+
